--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "url": "https://github.com/debloper/soapbox/issues"
   },
   "scripts": {
-    "parse": "bin/parse",
-    "generate": "bin/generate",
-    "clean": "rm -rf node_modules dist"
+    "prep": "bin/prep",
+    "build": "bin/build",
+    "clean": "rm -rf node_modules prep build"
   },
   "keywords": [
     "static",
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "dot": "^1.1.2",
+    "fs-extra": "^7.0.0",
     "gray-matter": "^4.0.1",
     "yargs": "^12.0.2"
   }
